--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      docker: latest
+      nodejs: latest
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
