--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    ECR_REPO_URI: "${AWS::AccountId}.dkr.ecr.$AWS_REGION.amazonaws.com"
+    ECR_REPO_URI: "738989335057.dkr.ecr.us-east-1.amazonaws.com/docker-monorepo"
 
 phases:
   install:
