--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
-      - echo "AWS Account ID: $ACCOUNT_ID"
+      - echo AWS Account ID: $ACCOUNT_ID
       - echo Logging in to Amazon ECR repo $ECR_REPO_URI
       - aws --version
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO_URI
@@ -26,17 +26,17 @@ phases:
       - echo Building Docker image FrontEnd ...
       - docker build -t frontend-test:frontend_latest ./apps/test
   post_build:
-    commands: |
-      echo Tagging Docker image backend...
-      docker tag nest-backend:backend_latest $ECR_REPO_URI:backend_latest
-      echo Tagging Docker image frontend...
-      docker tag frontend-test:frontend_latest $ECR_REPO_URI:frontend_latest
-      echo Pushing Docker backend image to Amazon ECR...
-      docker push $ECR_REPO_URI:backend_latest
-      echo Pushing Docker frontend image to Amazon ECR...
-      docker push $ECR_REPO_URI:frontend_latest
-      echo Update ECS Service
-      aws ecs update-service --cluster my-ecs-cluster --service my-ecs-service --task-definition my-ecs-task:latest --force-new-deployment
+    commands:
+      - echo Tagging Docker image backend...
+      - docker tag nest-backend:backend_latest $ECR_REPO_URI:backend_latest
+      - echo Tagging Docker image frontend...
+      - docker tag frontend-test:frontend_latest $ECR_REPO_URI:frontend_latest
+      - echo Pushing Docker backend image to Amazon ECR...
+      - docker push $ECR_REPO_URI:backend_latest
+      - echo Pushing Docker frontend image to Amazon ECR...
+      - docker push $ECR_REPO_URI:frontend_latest
+      - echo Update ECS Service
+      - aws ecs update-service --cluster my-ecs-cluster --service my-ecs-service --task-definition my-ecs-task:latest --force-new-deployment
 
 artifacts:
   files:
