--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
-      - echo AWS Account ID: $ACCOUNT_ID
+      - echo $ACCOUNT_ID
       - echo Logging in to Amazon ECR repo $ECR_REPO_URI
       - aws --version
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO_URI
