--- a/buildspec.yml
+++ b/buildspec.yml
@@ -37,8 +37,13 @@ phases:
       - docker push $ECR_REPO_URI:frontend_latest
       - TASK_DEF_ARN_APP=$(aws ecs describe-services --cluster my-ecs-cluster --services my-ecs-service --query 'services[0].taskDefinition' --output text)
       - TASK_DEF_REV_APP=$(aws ecs describe-task-definition --task-definition $TASK_DEF_ARN_APP --query 'taskDefinition.revision' --output text)
-      - echo Update ECS Service
+      - echo Update ECS Service FrontEnd
       - aws ecs update-service --cluster my-ecs-cluster --service my-ecs-service --task-definition my-ecs-task:$TASK_DEF_REV_APP --force-new-deployment
+
+      - TASK_DEF_ARN_APP2=$(aws ecs describe-services --cluster my-ecs-cluster --services my-ecs-service-backend --query 'services[0].taskDefinition' --output text)
+      - TASK_DEF_REV_APP2=$(aws ecs describe-task-definition --task-definition $TASK_DEF_ARN_APP2 --query 'taskDefinition.revision' --output text)
+      - echo Update ECS Service Backend
+      - aws ecs update-service --cluster my-ecs-cluster --service my-ecs-service-backend --task-definition my-ecs-task-backend:$TASK_DEF_REV_APP2 --force-new-deployment
 
 artifacts:
   files:
